<resources>
    <string name="app_name">Let\'s Deal</string>

    <string name="Login">login</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>

    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>

    <string-array name="book_names">
        <item>Waist Deep in Black Water</item>
        <item>Waiting for Nothing and Other Writings</item>
        <item>Wake Up Dead Man</item>
        <item>Waking Their Neighbors Up</item>
        <item>Walker Percy</item>
        <item>Walking in the Land of Many Gods</item>
        <item>The War on Poverty</item>
        <item>War upon the Land</item>
    </string-array>

    <string-array name="book_description">
        <item>A book about swimming</item>
        <item>Waiting for a letter</item>
        <item>A dead man wakes up</item>
        <item>Making a lot of noise, in writing</item>
        <item>Percy, the one that walks</item>
        <item>And so you say I am</item>
        <item>War never ends</item>
        <item>And we shall all be free</item>
    </string-array>

    <string-array name="book_prices">
        <item>$100</item>
        <item>$200</item>
        <item>$300</item>
        <item>$400</item>
        <item>$500</item>
        <item>$600</item>
        <item>$700</item>
        <item>$800</item>
    </string-array>

    <string-array name="book_images">
        <item>@drawable/swimteam</item>
        <item>@drawable/writeme</item>
        <item>@drawable/zombies</item>
        <item>@drawable/wakeandbakeneigh</item>
        <item>@drawable/percywalks</item>
        <item>@drawable/landofgods</item>
        <item>@drawable/warpoverty</item>
        <item>@drawable/waruponland</item>
    </string-array>

    <string-array name="book_authors">
        <item>Lane, John</item>
        <item>Kromer, Tom</item>
        <item>Jackson, Bruce</item>
        <item>Young, Thomas Daniel</item>
        <item>Ciuba, Gary M.</item>
        <item>Wohlpart, A. James</item>
        <item>Orleck, Annelise</item>
        <item>Brady, Lisa M.</item>
    </string-array>

    <string name="title_activity_post">New Post</string>
    <string name="view_all">View all</string>
    <string name="watched_posts">Your watched posts</string>
    <string name="user_posts">Your posts</string>
    <string name="recent_posts">Recent posts</string>

    <string name="nav_home">Home</string>
    <string name="nav_trending">Trending</string>
    <string name="nav_search">Search</string>
    <string name="nav_cart">My Cart</string>
    <string name="nav_account">Account</string>
  
    <string name="post_hint">Post Information</string>
    <string name="post_author">Author</string>
    <string name="post_title">Title</string>
    <string name="post_description">Description</string>
    <string name="post_price">Price</string>
    <string name="post_submit">Submit</string>
    
    <string name="lorem_test">Lorem Ipsum has been the industry\'s standard
        dummy text ever since the 1500s,when an unknown printer took a galley
        of type and scrambled it to make a type specimen book. It has survived
        not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the 1960s with the
        release of Letraset sheets containing Lorem Ipsum passages, and more recently
        with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        Lorem Ipsum has been the industry\'s standard
        dummy text ever since the 1500s,when an unknown printer took a galley
        of type and scrambled it to make a type specimen book. It has survived
        not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the 1960s with the
        release of Letraset sheets containing Lorem Ipsum passages, and more recently
        with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

</resources>
