<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <!--<item-->
        <!--android:id="@+id/action_trending"-->
        <!--android:icon="@drawable/ic_trending"-->
        <!--android:title="@string/nav_trending" />-->
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_upload"
        android:title="@string/nav_add" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/nav_cart" />
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_account"
        android:title="@string/nav_account" />

</menu>