<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/cardViewRelative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="0dp">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="29dp">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/recycler_view"
            android:layout_alignStart="@id/recycler_view"
            android:layout_marginBottom="-29dp"
            android:text="@string/recent_posts" />

        <TextView
            android:id="@+id/recentPost_viewall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/recycler_view"
            android:layout_alignEnd="@id/recycler_view"
            android:layout_marginBottom="-29dp"
            android:layout_marginEnd="11dp"
            android:text="@string/view_all" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/cardViewRelative"
        android:text="@string/user_posts" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/cardViewRelative"
        android:layout_marginEnd="13dp"
        android:text="@string/view_all" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardYourPost"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:layout_below="@id/textView3"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/holo_blue_bright" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/cardYourPost"
        android:text="@string/watched_posts" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/cardYourPost"
        android:layout_marginEnd="13dp"
        android:text="@string/view_all" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:layout_below="@id/textView5"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/holo_green_light" />

    <android.support.design.widget.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/nav_selector"
        app:itemTextColor="@drawable/nav_selector"

        app:menu="@menu/nav_items" />


</RelativeLayout>
