<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PostActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/field_padding"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:clickable="true"
        android:focusable="true"
        android:onClick="createIntent"
        android:outlineAmbientShadowColor="@color/WhiteSmoke"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/imageView_coverPreview"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_background_empty" />

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout_postContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView_image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/post_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingEnd="@dimen/field_padding"
            android:paddingStart="@dimen/field_padding"
            android:text="@string/post_hint"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editText_postAuthorLayout"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/field_padding"
            android:layout_marginStart="@dimen/field_padding"
            android:layout_marginTop="10dp"
            android:hint="@string/post_author"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_authorInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:lines="1"
                android:padding="@dimen/field_padding" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editText_postTitleLayout"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/field_padding"
            android:layout_marginStart="@dimen/field_padding"
            android:layout_marginTop="10dp"

            android:hint="@string/post_title"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_titleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapSentences"
                android:lines="2"
                android:padding="@dimen/field_padding" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editText_descInputLayout"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/field_padding"
            android:layout_marginStart="@dimen/field_padding"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/post_description"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_descInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine|textAutoCorrect"
                android:minHeight="100dp"
                android:padding="@dimen/field_padding"
                android:scrollHorizontally="false" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editText_priceInputLayout"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/field_padding"
            android:layout_marginStart="@dimen/field_padding"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/post_price"
            android:inputType="numberDecimal"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_priceInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/button_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="sendData"
        android:paddingEnd="@dimen/field_padding"
        android:paddingStart="@dimen/field_padding"
        android:text="@string/post_submit"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:theme="@style/Widget.MaterialComponents.Button" />

</RelativeLayout>